# zuzel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
lib/: CMakeLists.txt
res/: .gitignore  CMakeLists.txt  GenerateVersion.cmake  bin2h.cmake  bios.bfn  tscr.chr  ui_browse.json  ui_connecting.json  ui_error.json  ui_lobby.json  ui_main.json  ui_match.json  ui_server_join.json  ui_server_new.json  ui_settings.json
src/: CMakeLists.txt  include.h  main_server.c  main_ui.c
src/core/: config.h  errmacros.h  logger.c  logger.h  settings.c  settings.h  utils.c  utils.h  version.c  version.h
src/game/: connections.c  data.c  game.c  game.h  game_structs.h  game_t.h  network.c  packet.c  update.c  utils.c
src/game/match/: match.c  match.h  utils.c
src/game/player/: data.c  player.c  player.h  player_t.h
src/gfx/: font.c  font.h  font_bgi.c  font_bmp.c  font_priv.h  gfx.c  gfx.h
src/net/: client.c  endpoint.c  errors.c  net.c  net.h  packet.h  pkt.c  server.c  utils.c
src/ui/: events.h  main.c  menu_main.c  menu_server_join.c  menu_server_new.c  ui.c  ui.h  utils.c
src/ui/fragment/: dialog.c  fragment.c  fragment.h  fragment_browse.c  fragment_connecting.c  fragment_error.c  fragment_lobby.c  fragment_main.c  fragment_match.c  fragment_server_join.c  fragment_server_new.c  fragment_settings.c
src/ui/gfx/: font.c  font_bgi.c  font_bmp.c  font_priv.h  gfx.c  gfx.h  textures.c  view.c  view.h  view_box.c  view_button.c  view_canvas.c  view_event.c  view_frame.c  view_input.c  view_rect.c  view_slider.c  view_text.c  view_utils.c
src/ui/match/: match_gfx.c  match_gfx.h  match_input.c  match_input.h
src/ui/menu/: menu.h
src/ui/race/: race.h
